test/functions/generic/poi/init-in-private-array.good
init-in-private-array.chpl:31: In initializer:
init-in-private-array.chpl:32: error: success
  init-in-private-array.chpl:25: called as MyPrivateArray.init(type eltType = R)
